--- a/orbitez/package.json
+++ b/orbitez/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@taquito/taquito": "^11.1.0",
     "@taquito/tezbridge-signer": "^11.1.0",
     "axios": "^0.24.0",
+    "fs": "^0.0.1-security",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
