--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "license": "Apache-2.0",
     "main": "src/index.js",
     "dependencies": {
+        "@microsoft/signalr": "^6.0.1",
         "ws": "^7.4.0"
     },
     "scripts": {
