--- a/orbitez/package.json
+++ b/orbitez/package.json
@@ -13,6 +13,7 @@
     "@taquito/beacon-wallet": "^11.1.0",
     "@taquito/taquito": "^11.1.0",
     "@taquito/tezbridge-signer": "^11.1.0",
+    "@tezos-contrib/nft-hooks": "^0.0.1",
     "axios": "^0.24.0",
     "fs": "^0.0.1-security",
     "next": "12.0.7",
