--- a/orbitez/package.json
+++ b/orbitez/package.json
@@ -18,7 +18,8 @@
     "fs": "^0.0.1-security",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.45.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
