--- a/orbitez/package.json
+++ b/orbitez/package.json
@@ -23,7 +23,8 @@
     "@taquito/taquito": "^12.0.3",
     "bignumber.js": "^9.0.2",
     "taquito": "^1.0.0",
-    "web3": "^1.7.1"
+    "web3": "^1.7.1",
+    "node-forge": "1.3.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
