--- a/orbitez/package.json
+++ b/orbitez/package.json
@@ -8,13 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@airgap/beacon-sdk": "^2.3.8",
+    "@airgap/beacon-sdk": "3.0.0",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@microsoft/signalr": "^6.0.1",
     "@ramonak/react-progress-bar": "^4.4.0",
-    "@taquito/beacon-wallet": "^11.1.0",
-    "@taquito/signer": "^12.1.0",
-    "@taquito/taquito": "^12.0.3",
-    "@taquito/tezbridge-signer": "^11.1.0",
+    "@taquito/beacon-wallet": "12.1.0",
+    "@taquito/ledger-signer": "^12.1.1",
+    "@taquito/signer": "12.1.0",
+    "@taquito/taquito": "12.1.0",
+    "@taquito/tezbridge-signer": "12.1.0",
     "@tezos-contrib/nft-hooks": "^0.0.1",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
@@ -26,7 +28,6 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "sass": "^1.45.1",
-    "taquito": "^1.0.0",
     "web3": "^1.7.1"
   },
   "devDependencies": {
