--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "main": "src/index.js",
     "dependencies": {
         "@microsoft/signalr": "^6.0.1",
+        "lodash": "^4.17.21",
         "ws": "^7.4.0"
     },
     "scripts": {
